--- a/razerd.service.template
+++ b/razerd.service.template
@@ -4,6 +4,7 @@ Requires=local-fs.target
 After=local-fs.target
 
 [Service]
+Environment="LD_LIBRARY_PATH=/usr/local/lib"
 ExecStart=@CMAKE_INSTALL_PREFIX@/bin/razerd -f
 
 [Install]
